<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/new_registration"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_weight="9"
            android:layout_height="wrap_content"
            android:autofillHints="Email"
            android:hint="@string/user_email"
            android:inputType="textWebEmailAddress"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btnEmailValidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valid" />
    </LinearLayout>

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp"
        android:autofillHints="Phone Number"
        android:hint="@string/phone_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp"
        android:autofillHints="Name"
        android:hint="@string/user_name"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp"
        android:autofillHints="Password"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etPasswordCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp"
        android:autofillHints="Password Check"
        android:hint="@string/user_password_check"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register" />

    <TextView
        android:id="@+id/tvErrorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red" />

</LinearLayout>